--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(task_1768 1768_merge_strings_alternately/main.cpp)
 add_executable(task_283 283_move_zeroes/main.cpp)
+add_executable(task_643 643-maximum_average_subarray_1/main.cpp)
