19. Remove Nth Node From End of List

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,4 @@ add_executable(task_1732 1732_find_the_highest_altitude/main.cpp)
 add_executable(task_2215 2215_find_the_difference_of_two_arrays/main.cpp)
 add_executable(task_2390 2390_removing_stars_from_a_string/main.cpp)
 add_executable(task_930 933_number_of_recent_calls/main.cpp)
+add_executable(task_930 933_number_of_recent_calls/main.cpp)
